新增了关于隐投的内容

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - 攻略:
     - PVE 概览: guide/pve-overview.md
     - PVP 概览: guide/pvp-overview.md
+    - 虫洞基础: PVE/wormhole.md
   - 工具: tools.md
 markdown_extensions:
   - admonition
