--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,15 +14,16 @@ nav:
   - 首页: index.md
   - 指南:
     - 快速开始: guide/getting-started.md
+    - 使用链接: guide/inline-links.md
     - 术语表: guide/terminology.md
     - 新人 FAQ: guide/faq.md
-  - PVE 概览: index.md
-  - 攻略:
-    - PVE 概览: guide/pve-overview.md
-    - PVP 概览: guide/pvp-overview.md
-    - 扫描: guide/scanning.md
-    - 虫洞基础: PVE/wormhole.md
-    - 电鱼和炸鱼: PVE/bumping-lighting.md
+  - PVE 概览:
+    - 总览: PVE/pve-overview.md
+    - 打捞: PVE/looting.md
+    - 电炸集团: PVE/bumping-lighting.md
+  - PVP 概览:
+    - 概论: guide/pvp-overview.md
+    - 反收割: PVP/home-defence.md
   - 工具: tools.md
 markdown_extensions:
   - admonition
